--- a/source/sass/blocks/booking.scss
+++ b/source/sass/blocks/booking.scss
@@ -45,9 +45,8 @@
 
 @media  screen and (max-width: 1023px) {
   .booking {
-    padding-top: 91px;
-    padding-top: 150px;
-    padding-bottom: 100px;
+    padding-top: 90px;
+    padding-bottom: 50px;
   }
 }
 
@@ -134,6 +133,7 @@
 
 @media  screen and (max-width: 1023px) {
   .booking__heading h2 {
+    padding-bottom: 5px;
     font-size: 34px;
     line-height: 51px;
   }
@@ -142,6 +142,7 @@
 @media  screen and (max-width: 1023px) {
   .booking__description {
     max-width: 355px;
+    text-align: center;
   }
 }
 
@@ -166,6 +167,12 @@
   .booking__description p {
     padding-bottom: 60px;
     padding-right: 0;
+  }
+}
+
+@media  screen and (max-width: 1023px) {
+  .booking__description p {
+    padding-bottom: 50px;
   }
 }
 
