--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -18,9 +18,9 @@
 
 @media  screen and (max-width: 767px) {
   .catalog {
-    padding-top: 57px;
-    padding-bottom: 60px;
-    padding-left: 10px;
+    padding-top: 59px;
+    padding-bottom: 35px;
+    padding-left: 6px;
     padding-right: 5px;
   }
 }
@@ -48,7 +48,8 @@
 
 @media  screen and (max-width: 767px) {
   .catalog__wrapper-heading {
-    padding-bottom: 17px;
+    padding-left: 24px;
+    padding-bottom: 27px;
   }
 }
 
@@ -93,8 +94,9 @@
 
 @media  screen and (max-width: 767px) {
   .catalog__list {
-    flex-direction: column;
-    align-items: center;
+    //flex-direction: column;
+    //align-items: center;
+    justify-content: center;
   }
 }
 
@@ -110,5 +112,11 @@
     margin: 0;
     margin-right: 30px;
     margin-bottom: 30px;
+  }
+}
+
+@media  screen and (max-width: 767px) {
+  .cards__item {
+    margin-right: 0;
   }
 }
