--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -23,6 +23,15 @@
   text-decoration: none;
 }
 
+.button:hover {
+  opacity: 0.8;
+}
+
+.button:active {
+  opacity: 0.5;
+}
+
+
 @media  screen and (max-width: 1023px) {
   .button__link {
     min-width: 239px;
@@ -36,10 +45,10 @@
 @media  screen and (max-width: 767px) {
   .button__link {
     min-width: 220px;
-    padding-top: 0;
-    padding-bottom: 0;
-    padding-right: 0;
-    padding-left: 0;
+    padding-top: 11px;
+    padding-bottom: 7px;
+    padding-right: 51px;
+    padding-left: 52px;
   }
 }
 
