--- a/source/sass/blocks/booking.scss
+++ b/source/sass/blocks/booking.scss
@@ -52,11 +52,11 @@
 
 @media  screen and (max-width: 767px) {
   .booking {
-    padding-top: 60px;
+    padding-top: 62px;
     padding-bottom: 36px;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-bottom: 15px;
+    padding-left: 14px;
+    padding-right: 14px;
+    padding-bottom: 16px;
   }
 }
 
@@ -107,6 +107,14 @@
   }
 }
 
+@media  screen and (max-width: 767px) {
+  .booking__wrapper-text {
+    max-width: 270px;
+    text-align: center;
+  }
+}
+
+
 @media  screen and (max-width: 1200px) {
   .booking__wrapper {
     padding-top: 0;
@@ -148,6 +156,7 @@
 
 @media  screen and (max-width: 767px) {
   .booking__heading h2 {
+    padding-bottom: 12px;
     font-size: 24px;
     line-height: 31px;
   }
@@ -178,7 +187,7 @@
 
 @media  screen and (max-width: 767px) {
   .booking__description p {
-    padding-bottom: 40px;
+    padding-bottom: 34px;
     font-size: 16px;
     line-height: 22px;
   }
