--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -27,8 +27,8 @@
     flex-direction: column;
     //align-items: center;
 
-    padding-top: 65px;
-    padding-bottom: 65px;
+    padding-top: 60px;
+    padding-bottom: 58px;
     padding-left: 15px;
     padding-right: 15px;
   }
@@ -49,7 +49,9 @@
 
 @media  screen and (max-width: 767px) {
   .contacts__wrapper-text {
+    min-width: 290px;
     padding-top: 0;
+    padding-left: 0;
   }
 }
 
@@ -101,8 +103,6 @@
 
   margin: 0;
 }
-
-
 
 /* .map {
   position: relative;
@@ -225,7 +225,7 @@
 
 @media  screen and (max-width: 767px) {
   .contacts__phone {
-    padding-bottom: 43px;
+    padding-bottom: 36px;
   }
 }
 
