--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -223,6 +223,22 @@
   padding-left: 28px
 }
 
+.contacts__phone a {
+  color: inherit;
+
+  text-decoration: none;
+}
+
+.contacts__phone a:hover {
+  opacity: 0.8;
+  border-bottom: 1px solid rgba(1, 28, 64, 0.8);
+}
+
+.contacts__phone a:active {
+  opacity: 0.5;
+  border-bottom: 1px solid rgba(1, 28, 64, 0.5);
+}
+
 @media  screen and (max-width: 767px) {
   .contacts__phone {
     padding-bottom: 36px;
