--- a/source/sass/blocks/about-us.scss
+++ b/source/sass/blocks/about-us.scss
@@ -54,7 +54,7 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    align-items: start;
+    align-items: flex-start;
     padding-left: 0;
     font-size: 36px;
     line-height: 125%;
@@ -88,7 +88,7 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    align-items: start;
+    align-items: flex-start;
     padding-left: 0;
     font-size: 16px;
     line-height: 140%;
