Вносит правки (Ранее бронирование, checkbox)

--- a/source/sass/blocks/booking.scss
+++ b/source/sass/blocks/booking.scss
@@ -80,6 +80,12 @@
   }
 }
 
+@media  screen and (max-width: 767px) {
+  .booking__wrapper {
+    padding-bottom: 48px;
+  }
+}
+
 .booking__wrapper-text {
   display: flex;
   flex-direction: column;
