Вносит правки (Преимущества, заголовки)

--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -275,6 +275,19 @@
   color: #011C40;
 }
 
+@media  screen and (max-width: 1371px) {
+  .list-features__item h3 {
+    padding-right: 100px;
+  }
+}
+
+@media  screen and (max-width: 1241px) {
+  .list-features__item h3 {
+    padding-right: 36px;
+  }
+}
+
+
 @media  screen and (max-width: 1023px) {
   .list-features__item h3 {
     line-height: 25px;
