--- a/source/sass/blocks/about-us.scss
+++ b/source/sass/blocks/about-us.scss
@@ -21,6 +21,13 @@
 
 @media  screen and (max-width: 767px) {
   .about-us__wrapper {
+    padding-top: 120px;
+    padding-left: 15px;
+  }
+}
+
+@media  screen and (max-width: 452px) {
+  .about-us__wrapper {
     padding-top: 55px;
     padding-bottom: 163px;
     //padding-right: 40px;
@@ -50,6 +57,13 @@
 }
 
 @media  screen and (max-width: 767px) {
+  .about-us__wrapper h1 {
+    font-size: 30px;
+    line-height: 125%;
+  }
+}
+
+@media  screen and (max-width: 452px) {
   .about-us__wrapper h1 {
     display: flex;
     flex-wrap: wrap;
@@ -84,6 +98,13 @@
 }
 
 @media  screen and (max-width: 767px) {
+  .about-us__wrapper p {
+    font-size: 16px;
+    line-height: 140%;
+  }
+}
+
+@media  screen and (max-width: 452px) {
   .about-us__wrapper p {
     display: flex;
     flex-wrap: wrap;
