--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -1,7 +1,9 @@
 .features {
   min-height: 562px;
   padding-top: 112px;
-  padding-bottom: 119px;
+  padding-bottom: 79px;
+  padding-right: 63px;
+  padding-left: 103px;
 
   background-color: #E3ECF6;
   background-image: url("../img/landscape-2-desktop@1x.jpg");
@@ -38,7 +40,9 @@
 @media  screen and (max-width: 1023px) {
   .features {
     padding-top: 91px;
-    padding-bottom: 100px;
+    padding-bottom: 70px;
+    padding-right: 15px;
+    padding-left: 45px;
   }
 }
 
@@ -46,6 +50,7 @@
   .features {
     padding-top: 58px;
     padding-bottom: 36px;
+    padding-left: 15px;
   }
 }
 
@@ -53,27 +58,25 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
-  padding-right: 103px;
-  padding-left: 103px;
 }
 
 @media  screen and (max-width: 1023px) {
   .features__wrapper {
-    padding-right: 45px;
-    padding-left: 45px;
-  }
-}
-
-@media  screen and (max-width: 767px) {
-  .features__wrapper {
-    padding-right: 15px;
-    padding-left: 15px;
+    //padding-right: 45px;
+    //padding-left: 45px;
   }
 }
 
 .features__heading {
-  display: flex;
-  justify-content: center;
+  //display: flex;
+  //justify-content: center;
+  padding-left: 466px;
+}
+
+@media  screen and (max-width: 1023px) {
+  .features__heading {
+    padding-left: 233px;
+  }
 }
 
 @media  screen and (max-width: 767px) {
@@ -112,6 +115,8 @@
 
 .features__list {
   display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
   margin: 0;
   padding: 0;
 
@@ -120,7 +125,7 @@
 
 @media screen and (min-width: 1367px) {
   .features__list {
-    justify-content: space-around;
+    //justify-content: space-around;
   }
 }
 
@@ -133,15 +138,20 @@
 
 .list-features__item {
   max-width: 360px;
+  margin-right: 40px;
+  margin-bottom: 40px;
   padding-right: 30px;
   padding-left: 30px;
   padding-bottom: 27px;
+
   background-color: #F9FBFD;
 }
 
 @media  screen and (max-width: 1023px) {
   .list-features__item  {
     max-width: 206px;
+    margin-right: 30px;
+    margin-bottom: 30px;
     padding-right: 13px;
     padding-left: 19px;
     padding-bottom: 18px;
@@ -156,31 +166,9 @@
   }
 }
 
-.list-features__item--ship {
-  margin-right: 20px;
-}
-
-@media  screen and (max-width: 1023px) {
-  .list-features__item--ship {
-    margin-right: 15px;
-  }
-}
-
 @media  screen and (max-width: 767px) {
   .list-features__item--ship {
     margin-right: 0;
-  }
-}
-
-.list-features__item--ticks {
-  margin-left: 20px;
-  margin-right: 20px;
-}
-
-@media  screen and (max-width: 1023px) {
-  .list-features__item--ticks {
-    margin-left: 15px;
-    margin-right: 15px;
   }
 }
 
@@ -191,22 +179,6 @@
     padding-top: 2px;
 
     padding-right: 55px;
-  }
-}
-
-.list-features__item--boat {
-  margin-left: 20px;
-}
-
-@media  screen and (max-width: 1023px) {
-  .list-features__item--boat {
-    margin-left: 15px;
-  }
-}
-
-@media  screen and (max-width: 767px) {
-  .list-features__item--boat {
-    margin-left: 0;
   }
 }
 
