--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -92,13 +92,42 @@
   }
 }
 
+@media  screen and (max-width: 1023px) {
+  .catalog__list {
+    //justify-content: center;
+    justify-content: center;
+  }
+}
+
+@media  screen and (max-width: 768px) {
+  .catalog__list {
+    //justify-content: center;
+    justify-content: flex-start;
+  }
+}
+
 @media  screen and (max-width: 767px) {
   .catalog__list {
     //flex-direction: column;
     //align-items: center;
-    justify-content: center;
+    justify-content: space-around;
   }
 }
+
+@media  screen and (max-width: 630px) {
+  .catalog__list {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media  screen and (max-width: 337px) {
+  .catalog__list {
+    flex-direction: flex-start;
+    align-items: flex-start;
+  }
+}
+
 
 .cards__item {
   margin-left: 15px;
