Вносит правки (Общее, фон)

--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -4,7 +4,7 @@
   padding-right: 100px;
   padding-bottom: 101px;
 
-  background-color: #E5E5E5;;
+  background-color: #f9fbfd;
 }
 
 @media  screen and (max-width: 1023px) {
