--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -228,13 +228,23 @@
 }
 
 .contacts__phone {
+  //display: block;
   position: relative;
+  margin-left: 15px;
 
-  padding-left: 28px
+  //padding-left: 28px
 }
 
 .contacts__phone a {
-  color: inherit;
+  //padding-left: 16px;
+  //margin-left: 12px;
+  padding-left: 13px;
+
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+  color: #011C40;
 
   text-decoration: none;
 }
@@ -260,7 +270,7 @@
 
   position: absolute;
   top: 3px;
-  left: 0;
+  left: -14px;
 
   width: 18px;
   height: 18px;
