--- a/source/sass/blocks/card.scss
+++ b/source/sass/blocks/card.scss
@@ -11,6 +11,15 @@
   }
 }
 
+.card__img {
+  height: 386px;
+}
+
+.card__img picture {
+  height: 386px;
+}
+
+
 .card__img img {
   min-width: 260px;
   min-height: 386px;
@@ -32,7 +41,7 @@
 
 .card__main-heading h3 {
   margin: 0;
-  margin-top: -54px;
+  margin-top: -48px;
   padding-left: 30px;
   padding-right: 30px;
 
@@ -126,13 +135,14 @@
 
 .card__side.card__side--back {
   display: flex;
+  //flex-direction: column; //тут
   flex-wrap: wrap;
   justify-content: center;
 }
 
 .card__side--back {
   margin-top: -386px;
-  padding-top: 72px;
+  padding-top: 71px;
   padding-bottom: 35px;
   padding-left: 25px;
   padding-right: 25px;
@@ -150,9 +160,14 @@
   }
 }
 
-.button__wrapper {
-  align-self: flex-end;
+.card__wrapper-button {
+  //align-self: flex-end;
+  display: flex;
   min-width: 210px;
+}
+
+.card__link {
+  align-self: flex-end;
 }
 
 .card__side--back {
@@ -167,13 +182,21 @@
 }
 
 .card__text {
+  //height:208px;
   min-width: 208px;
+  //display: flex;
+  //flex-direction: column;
+  //min-height: 208px;
 }
 
 @media  screen and (max-width: 1023px) {
   .card__text {
     max-width: 237px;
   }
+}
+
+.card__description--cost p {
+  padding-bottom: 0;
 }
 
 /* .card__side--back {
