--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -12,7 +12,13 @@
     padding-top: 91px;
     padding-bottom: 70px;
     padding-left: 60px;
-    padding-right: 20px;
+    padding-right: 60px;
+  }
+}
+
+@media  screen and (max-width: 768px) {
+  .catalog {
+    padding-right: 0px;
   }
 }
 
@@ -21,7 +27,13 @@
     padding-top: 59px;
     padding-bottom: 35px;
     padding-left: 25px;
-    padding-right: 0px;
+    padding-right: 25px;
+  }
+}
+
+@media  screen and (max-width: 325px) {
+  .catalog {
+    padding-right: 0;
   }
 }
 
@@ -35,19 +47,32 @@
   .catalog__wrapper-heading {
     justify-content: flex-start;
     padding-bottom: 49px;
-    padding-left: 183px;
+    padding-left: 0;  // 183
+  }
+}
+
+@media  screen and (max-width: 768px) {
+  .catalog__wrapper-heading {
+    padding-left: 183px;  // 183
   }
 }
 
 @media  screen and (max-width: 767px) {
   .catalog__wrapper-heading {
-    padding-left: 6px;
+    padding-left: 0;
     padding-bottom: 28px;
+  }
+}
+
+@media  screen and (max-width: 325px) {
+  .catalog__wrapper-heading {
+    padding-left: 6px;
   }
 }
 
 .catalog h2 {
   margin: 0;
+
   font-weight: 600;
   font-size: 28px;
   line-height: 42px;
@@ -56,15 +81,30 @@
 
 @media  screen and (max-width: 1023px) {
   .catalog h2 {
+    margin: 0 auto;
+
     font-size: 26px;
     line-height: 39px;
   }
 }
 
+@media  screen and (max-width: 768px) {
+  .catalog h2 {
+    margin: 0;
+  }
+}
+
 @media  screen and (max-width: 767px) {
   .catalog h2 {
+    margin: 0 auto;
     font-size: 24px;
     line-height: 36px;
+  }
+}
+
+@media  screen and (max-width: 325px) {
+  .catalog h2 {
+    margin: 0;
   }
 }
 
@@ -85,18 +125,10 @@
   }
 }
 
-
 @media  screen and (max-width: 1023px) {
   .catalog__list {
     //justify-content: center;
-    justify-content: flex-start;
-  }
-}
-
-@media  screen and (max-width: 1023px) {
-  .catalog__list {
-    //justify-content: center;
-    justify-content: center;
+    justify-content: space-around;
   }
 }
 
@@ -140,8 +172,14 @@
 @media  screen and (max-width: 1023px) {
   .cards__item {
     margin: 0;
-    margin-right: 30px;
+    margin-right: 0;
     margin-bottom: 30px;
+  }
+}
+
+@media  screen and (max-width: 768px) {
+  .cards__item {
+    margin-right: 30px;
   }
 }
 
