--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -163,6 +163,8 @@
 
 
 .cards__item {
+  display: flex;
+  flex-direction: column;
   margin-left: 15px;
   margin-right: 15px;
   margin-top: 15px;
